css/logIn&signUp.css
/* ---------------- GENERAL LAYOUT ---------------- */
.bodyLogInSignUp {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: auto;
  min-height: 100vh;
  justify-content: space-between;
}

.sectionLogInSignUp {
  max-width: 1920px;
  width: 100%;
  height: 197px;
  display: flex;
}

/* Logo Styling */
.sectionLogInSignUp img,
.joinIcon img {
  width: 100.03px;
  height: 121.97px;
  margin-top: 80px;
  padding-left: 77px;
}

.JoinIconMobileWhite {
  display: none;
}

/* Splash Screen */
.splash {
  position: fixed;
  inset: 0;
  background-color: white;
  z-index: 9998;
  animation: fadeOut 1.5s ease forwards;
}

.joinIcon img {
  margin-top: 80px;
  position: relative;
  z-index: 9999;
  animation: moveLogo 1s ease-in-out forwards;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    visibility: hidden;
  }
}

@keyframes moveLogo {
  0% {
    width: 200px;
    height: 240px;
    top: calc(50vh - 50px);
    left: calc(50vw);
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    top: 0;
    left: 0;
    transform: translate(0, 0) scale(1);
  }
}

/* ---------------- LOGIN ---------------- */
.mainLogInSignUp {
  max-width: 1920px;
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
}

.formBox {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: #ffffff;
  box-shadow: 0px 0px 14px 3px #0000000a;
  border-radius: 30px;
}

.footerLogInSignUp {
  display: flex;
  justify-content: center;
  gap: 35px;
  width: 100%;
  padding: 30px 0;
}

.footerLogInSignUp a {
  color: #a8a8a8;
}

.title {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.line {
  background-color: #2aabe2;
  width: 150px;
  height: 3px;
}

.errorTextLogIn {
  top: 409px;
}

.sectionAlignmentLogIn {
  justify-content: space-between;
}

.signUp_button {
  display: flex;
  align-items: center;
  gap: 30px;
  padding-right: 80px;
}

.signUp_button button {
  font-size: 16px;
}

.signUp_button p {
  font-size: 20px;
}

.formIndex {
  padding-block: 50px;
  padding-inline: 110px;
  gap: 35px;
}

#emailLogIn {
  background-image: url("../assets/icons/mail.svg");
}

#passwordLogIn {
  background-image: url("../assets/icons/lock.svg");
}

.logBtn {
  display: flex;
  gap: 35px;
}

#logInBtn {
  font-size: 21px;
}

#guestBtn {
  border: 1px solid #2a3647;
  background-color: white;
  color: #2a3647;
  font-size: 21px;
}

#guestBtn:hover {
  border: 1px solid #2aabe2;
  color: #2aabe2;
}

.password {
  background-image: unset !important;
}

.password-wrapper {
  position: relative;
  width: 100%;
}

.password-icon {
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  width: 30px;
  height: 30px;
  background-image: url("../assets/icons/visibility_off.svg");
  background-repeat: no-repeat;
  background-size: cover;
  cursor: pointer;
}

/* ---------------- SIGN-UP ---------------- */
.sectionAlignmentSignUp {
  justify-content: left;
}

.formSignUp {
  gap: 32px;
  padding-block: 48px;
  padding-inline: 88px;
  margin-left: -31px;
}

.vectorPosition {
  position: relative;
  top: 70px;
  left: 110px;
}

.vector {
  padding: 5px;
  transition: transform 0s ease;
}

.vector:hover {
  background-color: #f5f7f9;
  height: 21px;
  width: 24px;
  border-radius: 100px;
  transform: scale(1) translateX(-10%);
}

#nameSignUp {
  background-image: url("../assets/icons/person.svg");
}

#emailSignUp {
  background-image: url("../assets/icons/mail.svg");
}

#passwordSignUp,
#confirmSignUp {
  background-image: url("../assets/icons/lock.svg");
}

.passwordInput {
  background-image: url("../assets/icons/visibility_off.svg") !important;
}

.confirmError:focus {
  border-color: #ff001f !important;
}

.errorTextSignUp {
  top: 455px;
}

.checkPP {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 14px;
}

.checkBox {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}

.custom-checkbox {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.checkbox-icon {
  width: 24px;
  height: 24px;
  background-image: url("../assets/icons/checkbox-empty.svg");
  background-size: contain;
  background-repeat: no-repeat;
  margin-right: 8px;
}

.checkBox:not(:checked) + .custom-checkbox:hover .checkbox-icon {
  background-image: url("../assets/icons/checkbox-hover.svg");
}

.checkBox:checked + .custom-checkbox .checkbox-icon {
  background-image: url("../assets/icons/checkbox-checked.svg");
}

.checkBox:checked + .custom-checkbox:hover .checkbox-icon {
  background-image: url("../assets/icons/checkbox-checked-hover.svg");
}

.checkText {
  color: #a8a8a8;
}

.signBtn {
  display: flex;
  gap: 10px;
}

#signUpBtn {
  font-size: 21px;
}

.linkSignUpPP {
  font-weight: normal !important;
  color: #29abe2;
  display: inline-block;
  transition: transform 0s ease;
}

.linkSignUpPP:hover {
  text-decoration: underline;
  text-underline-offset: 4px;
  transform: scale(1.05) translateX(3%);
}

/* Sign-Up Success Message */
.singUpMsg {
  position: fixed;
  inset: 0;
  z-index: 9998;
  background-color: rgba(0, 0, 0, 0.1);
  justify-content: center;
  align-items: center;
  display: flex;
}

.singUpMsg .content {
  background-color: #2a3647;
  position: relative;
  border-radius: 20px;
  height: 74px;
  width: 312px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.singUpMsg p {
  color: white;
  font-size: 20px;
  height: 24px;
  width: 262px;
  text-align: center;
}

.slide-up {
  animation: slideUp 0.5s ease-out forwards;
}

@keyframes slideUp {
  from {
    transform: translateY(100vh);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@media (max-width: 1050px) {
  .sectionLogInSignUpMobile img {
    width: 64px;
    height: 78.03px;
    margin-top: 37px;
  }

  .sectionLogInSignUpMobile {
    height: 152.03px;
  }
}

@media (max-width: 700px) {
  h1 {
    font-size: 47px !important;
  }

  input {
    width: 322px;
    background-position: 315px;
  }

  .line {
    width: 88px;
  }

  .sectionAlignmentLogIn {
    height: 152.03px;
  }

  .formSignUp {
    padding: 32px;
  }

  #signUpBtn {
    font-size: 16px;
    width: 180px;
    height: 51px;
  }

  .errorTextSignUp {
    top: 420px;
  }

  .singUpMsg .content {
    width: 320px;
  }

  .vectorPosition {
    left: 60px;
    top: 40px;
  }

  .signUp_button {
    position: absolute;
    bottom: 10%;
    padding: 0;
    width: 100%;
    justify-content: center;
    z-index: 1;
  }

  .formIndex {
    padding: 32px;
    top: calc(50% - 236.5px - 60px);
    margin-bottom: 150px;
  }

  .logBtn {
    flex-direction: column;
    gap: 21px;
    margin-top: 20px;
  }

  #guestBtn,
  #logInBtn {
    font-size: 16px;
  }

  .splash {
    background-color: #2a3647;
    animation: fadeSplash 1.25s ease-in-out forwards;
  }

  @keyframes fadeSplash {
    from {
      opacity: 1;
      visibility: visible;
    }
    to {
      opacity: 0;
      visibility: hidden;
    }
  }

  .joinIcon img {
    margin: 0;
  }

  @keyframes moveLogo {
    0% {
      width: 200px;
      height: 240px;
      top: 50vh;
      left: calc(50vw - 30px);
      transform: translate(-50%, -50%);
    }
    100% {
      width: 64px;
      height: 78.03px;
      top: 37px;
      left: 0;
      transform: translate(0, 0);
    }
  }

  .JoinIconMobileWhite {
    display: block;
    animation: moveLogo 1s ease-in-out forwards, fadeOutIcon 1s ease-in-out forwards !important;
  }

  .JoinIconMobile {
    position: relative;
    width: fit-content;
    height: fit-content;
    width: 100px;
    height: 120px;
  }

  .JoinIconMobile img {
    position: absolute;
    top: 0;
    left: 0;
  }

  @keyframes fadeOutIcon {
    from {
      opacity: 1;
      visibility: visible;
    }
    to {
      opacity: 0;
      visibility: hidden;
    }
  }
}

@media (max-width: 480px) {
  input {
    width: 80vw;
    background-position: 79vw;
  }

  .formSignUp {
    width: calc(100% - 40.8px);
    padding: 20px;
  }

  .formIndex {
    width: calc(100% - 40px);
    padding: 20px;
  }

  .vectorPosition {
    left: 30px;
  }

  .signUp_button {
    flex-direction: column;
    gap: 20px;
  }
}

@media (max-height: 740px) {
  .signUp_button {
    bottom: -10px;
  }
}

@media (max-height: 700px) {
  .signUp_button {
    bottom: -10%;
  }
}

